--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,8 @@
   },
   "ConnectionStrings": {
 
-    //"DefaultConnection": "Server=DARC\\SQLEXPRESS;Database=dstock;Trusted_Connection=True;MultipleActiveResultSets=True;Integrated Security=True;TrustServerCertificate=True;"
-    "DefaultConnection": "Server=DESKTOP-LHF3AG6\\SQLEXPRESS;Database=dstock;Trusted_Connection=True;MultipleActiveResultSets=True;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-RFTF5I2\\SQLEXPRESS;Database=dstock;Trusted_Connection=True;MultipleActiveResultSets=True;Integrated Security=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=DESKTOP-LHF3AG6\\SQLEXPRESS;Database=dstock;Trusted_Connection=True;MultipleActiveResultSets=True;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Jwt": {
     "validIssuer": "dsacco",
